--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
     publish = "build"
 
-[[redirects]]
-    from = "/*"
-    to = "/index.html"
+[[redirect]]
+    from= "/*"
+    to = "index.html"
     status = 200
